src/objects/Department_SOSP__c.object
<CustomObject>
    <fields>
        <fullName>Department_Code__c</fullName>
        <label>Department Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dept_Head_Or_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dept Head Or Manager</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Departments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Employer__c</fullName>
        <label>Employer</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Departments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Estimated_Size__c</fullName>
        <label>Estimated Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipName>Departments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Department__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Department</label>
        <referenceTo>Department_SOSP__c</referenceTo>
        <relationshipName>Departments</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Department</label>
    <nameField>
        <label>Department Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Departments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>